Fix permissions for CTS [1/2]
    * Rename old MODIFY_OVERLAYS to oms.permission.MODIFY_OVERLAYS
    * Restrict MODIFY_OVERLAYS to system or signature

Change-Id: I094ef303b7026342459d4981677837835f500e22

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -3150,10 +3150,10 @@
 
     <!-- Allows an application to make calls to OverlayManagerService.
          @hide -->
-    <permission android:name="android.permission.MODIFY_OVERLAYS"
+    <permission android:name="oms.permission.MODIFY_OVERLAYS"
         android:label="@string/permlab_modifyOverlays"
         android:description="@string/permdesc_modifyOverlays"
-        android:protectionLevel="normal" />
+        android:protectionLevel="signatureOrSystem" />
 
     <application android:process="system"
                  android:persistent="true"
